fix(#68): Didn't updated the oldest game in history on visible

--- a/services/files/front/components/profile-history/profile-history.css
+++ b/services/files/front/components/profile-history/profile-history.css
@@ -1,6 +1,6 @@
 .game-results-container {
     max-width: 800px;
-    margin: auto auto 200px auto;
+    margin: auto auto 150px auto;
 }
 
 .loading-spinner {
